adapted credentials resolving and started fixing tests